--- a/index.html
+++ b/index.html
@@ -4,6 +4,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>dollar and pounds</title>
+    <style>
+    * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            /* background-color: #2e394d; */
+            height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        div {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+input {
+  font-family: system-ui, sans-serif;
+  font-size: 2rem;
+  cursor: pointer;
+  padding: .1em .6em;
+  font-weight: bold;  
+  border: none;
+  margin-top: 40px;
+  border-radius: 20px;
+  max-width: 7em;
+}
+#dollar{
+    outline: 5px solid #8BC34A;
+}
+#pound{
+    outline: 5px solid #e27c31;
+}
+
+    </style>
 </head>
 <body>
     <div>
